--- a/starter/cloudstorage/src/main/resources/templates/login.html
+++ b/starter/cloudstorage/src/main/resources/templates/login.html
@@ -11,7 +11,7 @@
 <body class="p-3 mb-2 bg-light text-black">
 <div class="container justify-content-center w-25 p-3" style="background-color: #eeeeee; margin-top: 5em;">
     <h1 class="display-5">Login</h1>
-    <form action="/user/login" method="POST">
+    <form th:action="@{/processLogin}" method="POST">
         <!--                <div class="alert alert-danger">-->
         <!--                    Invalid username or password-->
         <!--                </div>-->
@@ -35,7 +35,7 @@
     </form>
 
     <div class="form-group" style="margin-top: 0.5em;">
-        <label><a href="/user/signup">Click here to sign up</a></label>
+        <label><a href="/user/getSignup">Click here to sign up</a></label>
     </div>
 </div>
 </body>
