--- a/starter/cloudstorage/src/main/resources/templates/signup.html
+++ b/starter/cloudstorage/src/main/resources/templates/signup.html
@@ -15,7 +15,7 @@
     </div>
 
     <h1 class="display-5">Sign Up</h1>
-    <form action="/user/signup" method="POST">
+    <form th:action="@{/user/postSignup}" method="POST" th:object="${userDto}">
         <!--                <div id="success-msg" class="alert alert-dark">-->
         <!--                    You successfully signed up! Please continue to the <a>login</a> page.-->
         <!--                </div>-->
@@ -28,24 +28,24 @@
         <div class="form-row">
             <div class="form-group col-md-6">
                 <label for="inputFirstName">First Name</label>
-                <input type="text" name="firstName" class="form-control" id="inputFirstName"
+                <input th:field="*{firstName}" type="text" name="firstName" class="form-control" id="inputFirstName"
                        placeholder="Enter First Name" maxlength="20" required>
             </div>
             <div class="form-group col-md-6">
                 <label for="inputLastName">Last Name</label>
-                <input type="text" name="lastName" class="form-control" id="inputLastName" placeholder="Enter Last Name"
+                <input th:field="*{lastName}" type="text" name="lastName" class="form-control" id="inputLastName" placeholder="Enter Last Name"
                        maxlength="20" required>
             </div>
         </div>
         <div class="form-row">
             <div class="form-group col-md-6">
                 <label for="inputUsername">Username</label>
-                <input type="text" name="username" class="form-control" id="inputUsername" placeholder="Enter Username"
+                <input th:field="*{userName}" type="text" name="username" class="form-control" id="inputUsername" placeholder="Enter Username"
                        maxlength="20" required>
             </div>
             <div class="form-group col-md-6">
                 <label for="inputPassword">Password</label>
-                <input type="password" name="password" class="form-control" id="inputPassword"
+                <input th:field="*{password}" type="password" name="password" class="form-control" id="inputPassword"
                        placeholder="Enter Password" maxlength="20" required>
             </div>
         </div>
